--- a/unidad_04/ejercicio_01/index.html
+++ b/unidad_04/ejercicio_01/index.html
@@ -2,13 +2,25 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Ejercicio 04 - Ejercicio 1</title>
+    <title>Ganando precisión con los selectores en CSS</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
-<h1>Aprendiendo a utilizar imágenes</h1>
-<img src="https://www.altonivel.com.mx/assets/images/Estilo_de_Vida/Recomendaciones/mario_bros(1).jpg" alt="Logo Mario"
-     width="320" height="240"/>
-
+<h1 class="encabezado" id="titulo">Lista de la compra</h1>
+<ul>
+    <li id="elemento-1">Articulo blaa</li>
+    <li id="elemento-2"> Articulo blaa</li>
+    <li id="elemento-3"> Articulo blaa</li>
+    <li id="elemento-4"> Articulo blaa</li>
+    <li id="elemento-5"> Articulo blaa</li>
+</ul>
+<ol>
+    <li id="super-1">Supermercado blaa</li>
+    <li id="super-2"> Supermercado blaa</li>
+    <li id="super-3"> Supermercado blaa</li>
+    <li id="super-4"> Supermercado blaa</li>
+    <li id="super-5"> Supermercado blaa</li>
+</ol>
 </body>
 </html>
